// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHandlers should match expected output 1`] = `
 [
  {
    "content": "const page = require("./../../../pages/api/.well-known/openid-configuration.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/api/.well-known/openid-configuration.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/check-your-answers.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/check-your-answers.js",
  },
  {
    "content": "const page = require("./../../pages/ras/journey1.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/form-page.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/form-page.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/result.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/result.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey2/[pageId].js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey2/[pageId].js",
  },
  {
    "content": "const page = require("./../pages/_error.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/_error.js",
  },
]
`;

exports[`generateHandlers should match expected output 2 1`] = `
[
  {
    "content": "const page = require("./../pages/index.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/index.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/check-your-answers.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/check-your-answers.js",
  },
  {
    "content": "const page = require("./../../pages/ras/journey1.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/form-page.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/form-page.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey1/result.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey1/result.js",
  },
  {
    "content": "const page = require("./../../../pages/ras/journey2/[pageId].js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/ras/journey2/[pageId].js",
  },
  {
    "content": "const page = require("./../pages/_error.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
",
    "handlerPath": "handlers/_error.js",
  },
]
`;

exports[`generateLambdaHandler should match expected output 1`] = `
"const page = require("./../pages/_error.js");
const handlerFactory = require("@sls-next/next-aws-lambda");
const handler = handlerFactory(page);

module.exports.render = handler;
"
`;
